--- a/DrinkAndGo1/DrinkAndGo1/Views/Home/SearchOn.cshtml
+++ b/DrinkAndGo1/DrinkAndGo1/Views/Home/SearchOn.cshtml
@@ -20,7 +20,8 @@
 
 </div>
 
-<p class="btn btn-group pull-right">
+<div class="btn btn-group">
+    <a>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "btn btn-default" })</a>
     <a>@Html.ActionLink("Show all drinks", "ShowAllDrinks", "Home", null, new { @class = "btn btn-default" })</a>
-    </p>
+    </div>
 
