--- a/DrinkAndGo1/DrinkAndGo1/Views/ShoppingCart/Index.cshtml
+++ b/DrinkAndGo1/DrinkAndGo1/Views/ShoppingCart/Index.cshtml
@@ -1,9 +1,37 @@
-﻿@using DrinkAndGo1.ViewModels
-@model ShoppingCartViewModel
-
+﻿@model DrinkAndGo1.ViewModels.ShoppingCartViewModel
+@{
+    ViewBag.Title = "Shopping Cart";
+}
+<script src="~/Scripts/jquery-1.7.min.js"
+        type="text/javascript"></script>
+<script type="text/javascript">
+    $(function () {
+        // Document.ready -> link up remove event handler
+        $(".RemoveLink").click(function () {
+            // Get the id from the link
+            var recordToDelete = $(this).attr("data-id");
+            if (recordToDelete != '') {
+                // Perform the ajax post
+                $.post("/ShoppingCart/RemoveFromCart", {"id": recordToDelete },
+                    function (data) {
+                        // Successful requests get here
+                        // Update the page elements
+                        if (data.ItemCount == 0) {
+                            $('#row-' + data.DeleteId).fadeOut('slow');
+                        } else {
+                            $('#item-count-' + data.DeleteId).text(data.ItemCount);
+                        }
+                        $('#cart-total').text(data.CartTotal);
+                        $('#cart-status').text('Cart (' + data.CartCount + ')');
+                    });
+            }
+        });
+    });
+</script>
 <div class="row checkoutForm">
     <h2>Your shopping cart</h2>
     <h4>Here are the drinks in your shopping cart.</h4>
+
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
@@ -15,23 +43,24 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var line in Model.ShoppingCart.ShoppingCartItems)
+            @foreach (var item in Model.ShoppingCartItems)
             {
-                <tr>
-                    <td class="text-center">@line.Amount</td>
-                    <td class="text-left">@line.Drink.Name</td>
-                    <td class="text-right">@line.Drink.Price.ToString("c")</td>
+                <tr id="row-@item.DrinkId">
+                    <td class="text-center" id="item-count-@item.DrinkId">@item.Amount</td>
+                    <td class="text-left">@item.Drink.Name</td>
+                    <td class="text-right">@item.Drink.Price.ToString("c")</td>
                     <td class="text-right">
-                        @((line.Amount * line.Drink.Price).ToString("c"))
+                        @((item.Amount * item.Drink.Price).ToString("c"))
                     </td>
-                    <td class="text-center"><a>@Html.ActionLink(" ", "RemoveFromShoppingCart", "ShoppingCart", new { id = line.Drink.DrinkId }, new { @class = "glyphicon glyphicon-remove text-danger remove" })</a></td>
+                   
+                   <td class="text-center"><button class="RemoveLink glyphicon glyphicon-remove text-danger remove" data-id="@item.DrinkId"></button></td>
                 </tr>
             }
         </tbody>
         <tfoot>
             <tr>
                 <td colspan="3" class="text-right">Total:</td>
-                <td class="text-right">
+                <td class="text-right" id="cart-total">
                     @Model.ShoppingCartTotal.ToString("c")
                 </td>
             </tr>
@@ -40,7 +69,7 @@
 
     <div class="text-right">
         <div class="btn-group ">
-            <a class="btn btn-success" asp-controller="Order" asp-action="Checkout">Check out</a>
+            <a>@Html.ActionLink("Check out", "Checkout", "Order", null, new { @class = "btn btn-success" })</a>
             <a class="btn-group">
                 <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                     Add more drinks<span class="caret"></span>
