--- a/DrinkAndGo1/DrinkAndGo1/Views/Drinks/Create.cshtml
+++ b/DrinkAndGo1/DrinkAndGo1/Views/Drinks/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create a new drink</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,8 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Drink</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
