--- a/DrinkAndGo1/DrinkAndGo1/Views/Drinks/Delete.cshtml
+++ b/DrinkAndGo1/DrinkAndGo1/Views/Drinks/Delete.cshtml
@@ -6,10 +6,8 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this drink?</h3>
 <div>
-    <h4>Drink</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Category.CategoryName)
