--- a/DrinkAndGo1/DrinkAndGo1/Views/Drinks/Index.cshtml
+++ b/DrinkAndGo1/DrinkAndGo1/Views/Drinks/Index.cshtml
@@ -31,7 +31,7 @@
                         <img src="@item.ImageThumbnailUrl" style="width:390px; height:250px" />
                         <div class="caption">
                             <h3 class="pull-right">@item.Price.ToString("c")</h3>
-                            <h3><a>@Html.ActionLink(item.Name, "DrinkDetails", "Home", new { id = item.DrinkId }, null)</a></h3>
+                            <h3><a>@Html.ActionLink(item.Name, "Details", "Home", new { id = item.DrinkId }, null)</a></h3>
                             <p>@item.ShortDescription</p>
                         </div>
                     </div>
