--- a/DrinkAndGo1/DrinkAndGo1/Views/Shared/Carousel.cshtml
+++ b/DrinkAndGo1/DrinkAndGo1/Views/Shared/Carousel.cshtml
@@ -8,10 +8,10 @@
             </ol>
             <div class="carousel-inner">
                 <div class="item active">
-                    <img class="slide-image" src="~/Images/carousel1.jpg" alt="">
+                    <img class="slide-image" src="~/Images/Couple-Beers.png" alt="">
                 </div>
                 <div class="item">
-                    <img class="slide-image" src="~/Images/carousel2.jpg" alt="">
+                    <img class="slide-image" src="~/Images/JUICE-BAR-image.jpg" alt="">
                 </div>
                 <div class="item">
                     <img class="slide-image" src="~/Images/carousel3.jpg" alt="">
