--- a/DrinkAndGo1/DrinkAndGo1/Views/Shared/_Layout.cshtml
+++ b/DrinkAndGo1/DrinkAndGo1/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("DontThink-JustDrink", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </button>  
+                @Html.ActionLink("Drink&Think", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -25,6 +25,10 @@
                     <li>@Html.Partial("_Default")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink(" ", "Index", "ShoppingCart", null, new {  @class = "glyphicon glyphicon-shopping-cart"})</li>
+                    @if (User.IsInRole("Admin") || User.IsInRole("Editor"))
+                    {
+                    <li>@Html.Partial("_Settings")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
                 @using (Html.BeginForm("SearchOn", "Home", FormMethod.Get, new { @class = "form-inline navbar-form navbar-right" }))
