--- a/DrinkAndGo1/DrinkAndGo1/Views/Home/SearchOn.cshtml
+++ b/DrinkAndGo1/DrinkAndGo1/Views/Home/SearchOn.cshtml
@@ -21,7 +21,7 @@
 </div>
 
 <div class="btn btn-group">
-    <a>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "btn btn-default" })</a>
+    <a>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "btn btn-primary" })</a>
     <a>@Html.ActionLink("Show all drinks", "ShowAllDrinks", "Home", null, new { @class = "btn btn-default" })</a>
     </div>
 
